# workshop-ai-augmented-data

./: .gitignore  README.md  pyproject.toml
data/raw/: eiom24-1200  us_pols_20.csv
data/tmp/: us_pols_20.csv
figures/: eiom24-400
notebooks/: 01-getting-started.ipynb  02-data-types-and-structures.ipynb  03-ai-driven-data-augmentation.ipynb  03-data-augmentation.ipynb
src/: llm_classifier.py  tasks.py
