[tool.poetry]
name = "workshop-ai-augmented-data"
version = "0.1.0"
description = "This workshop introduces users to automate LLM usage using python and api calls."
authors = ["Mickael Temporão <16172142+mickaeltemporao@users.noreply.github.com>"]
license = "CC BY-NC 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
pyqt6 = "^6.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
